PY_INCLUDES = -I$(srcdir)/../include \
		-I$(srcdir)/..include \
		-I$(top_srcdir)/ods/include \
		-I$(NUMPY_INCLUDE_PATH)

pkggrafanadir = ${pythondir}/graf_analysis
pkggrafana_PYTHON = __init__.py \
		compMinMeanMax.py \
		compMinMeanMaxRate.py \
		grafanaAnalysis.py \
		grafanaFormatter.py \
		rankMemByJob.py \
		lustreData.py
