PY_INCLUDES = -I$(srcdir)/../include \
		-I$(srcdir)/..include \
		-I$(top_srcdir)/ods/include \
		-I$(NUMPY_INCLUDE_PATH)

pkggrafanadir = ${pythondir}/graf_analysis
pkggrafana_PYTHON = __init__.py \
		grafanaAnalysis.py \
		grafanaFormatter.py \
		meanMetricRate.py \
		compMinMeanMax.py \
		compMinMeanMaxRate.py \
		rankMemByJob.py \
		lustreData.py
