PY_INCLUDES = -I$(srcdir)/../include \
		-I$(srcdir)/..include \
		-I$(top_srcdir)/ods/include \
		-I$(NUMPY_INCLUDE_PATH)

pkggrafanadir = ${pythondir}/graf_analysis
pkggrafana_PYTHON = __init__.py \
		grafanaAnalysis.py \
		grafanaFormatter.py \
		table_formatter.py \
		time_series_formatter.py \
		meanMetricRate.py \
		metricRateBin.py \
		compMinMeanMax.py \
		rankMemByJob.py \
		lustreData.py \
		papiJobsTable.py \
		papiJobStatTable.py \
		papiMeanJobMetrics.py \
		papiTimeseries.py
